--- a/style.css
+++ b/style.css
@@ -102,14 +102,14 @@ h6 {
   margin: 0 auto;
 }
 
-.red {
+.light__color--red.active {
   background-color: red;
 }
 
-.yellow {
+.light__color--yellow.active {
   background-color: yellow;
 }
 
-.green {
+.light__color--green.active {
   background-color: green;
 }
